# Office_Politics_APP

./: .env.example  .gitignore  BUILD_FIX_SUMMARY.md  CLAUDE.md  DEPLOYMENT_TROUBLESHOOTING.md  DEPLOY_NOW.md  DEPLOY_SIMPLE.md  Dockerfile  Dockerfile.simple  GOOGLE_OAUTH_SETUP.md  MVP_SUMMARY.md  POLITICO_FEATURES.md  QUICKSTART.md  RENDER_DEPLOY.md  RENDER_SETUP.md  SETUP_SUBTEXT.md  app_minimal.py  app_simple.py  build_render.sh  build_render_api_only.sh  build_simple.sh  build_ultra_minimal.sh  prod  prod.py  pyproject.toml  render.yaml  requirements-minimal-render.txt  requirements-minimal.txt  requirements.txt  run_dev.py  sample_people.csv  test_local.sh
scripts/: init_db.py  reset_db.py  seed_data.py
src/subtext/: ai_service.py  app.py  auth.py  background_tasks.py  calendar_analyzer.py  calendar_service.py  db.py  encryption.py  gmail_ingestion.py  google_oauth.py  init_app.py  init_frontend_app.py  llm_service.py  memory_cache.py  models.py  network_analyzer.py  schemas.py  security.py  settings.py  util.py  vscode_utils.py
src/subtext/routes/: __init__.py  analyzer.py  auth.py  automated_power_map.py  calendar.py  logbook.py  oauth.py  power_map.py  stakeholders.py  tone_decoder.py
tests/: test_example.py  test_version.py
www/: package.json
www/src/: automated-power-map.html  index.css  index.html  manifest.json  power-map.html  strategic-calendar.html
www/src/src/components/splash/: index.css
www/webpack/: webpack.common.js  webpack.prod.js
