[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "subtext"
description = "Politico - Office Politics Navigator"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["office", "politics", "career"]
license = { text = "BSD 3-Clause License" }
classifiers = ["Programming Language :: Python :: 3"]
version = "1.0.0"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.5",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.8.1",
    "requests>=2.31.0",
]

[tool.ruff]
line-length = 200

[tool.pylint."MESSAGES CONTROL"]
good-names = [
    "c",
    "i",
    "ok",
    "id",
    "e",
    "f"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]